[gd_scene load_steps=10 format=3 uid="uid://lu6byijexn48"]

[ext_resource type="Script" path="res://Interactables/interatables_scripts/exit_portal.gd" id="1_0msi0"]
[ext_resource type="Texture2D" uid="uid://dhxmg1ldnp8gr" path="res://Sprites/portalsSpriteSheet.png" id="2_qmlc1"]
[ext_resource type="AudioStream" uid="uid://dekxnve04erbs" path="res://SoundEffects/portal_effect.ogg" id="3_jfsrs"]

[sub_resource type="Animation" id="Animation_fbjjo"]
resource_name = "Active"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_upgt8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2w36l"]
_data = {
"Active": SubResource("Animation_fbjjo"),
"RESET": SubResource("Animation_upgt8")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_luqk0"]
radius = 7.0
height = 22.0

[sub_resource type="Gradient" id="Gradient_62vgy"]
offsets = PackedFloat32Array(0.23622, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fwcyl"]
gradient = SubResource("Gradient_62vgy")
width = 68
height = 120
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.543, 0.03)

[node name="exit_portal" type="Area2D"]
z_index = 2
position = Vector2(-7, -25)
collision_layer = 16
script = ExtResource("1_0msi0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(7, 12)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_qmlc1")
hframes = 4
vframes = 4
frame = 1

[node name="animation_portal" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2w36l")
}
autoplay = "Active"

[node name="portal_collider" type="CollisionShape2D" parent="."]
position = Vector2(7, 12)
shape = SubResource("CapsuleShape2D_luqk0")
debug_color = Color(0.922799, 0.266801, 0.195321, 0.42)

[node name="portal_enter_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(7, 12)
stream = ExtResource("3_jfsrs")
volume_db = 2.0

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(7, 12)
scale = Vector2(1, 1.02083)
texture = SubResource("GradientTexture2D_fwcyl")
texture_scale = 0.2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
